style(contactSection): fix h4 spacing and margin

--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -6,6 +6,10 @@
   background-color: #05031b;
 }
 
+.secaoContato h3 {
+  margin-bottom: 20px;
+}
+
 .contatoContainer {
   margin-top: 40px ;
   display: flex;
@@ -19,6 +23,10 @@
   align-items: flex-start;
   padding: 15px;
   max-width: 350px;
+}
+
+.contatoConteudo h4{
+  margin-bottom: 20px;
 }
 
 .contatoConteudo div {
